Outline-postgress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline-postgres
  namespace: outline
  labels:
    app: outline-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline-postgres
  template:
    metadata:
      labels:
        app: outline-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: outline-postgres
  namespace: outline
spec:
  selector:
    app: outline-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
