Outline-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline-redis
  namespace: outline
  labels:
    app: outline-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline-redis
  template:
    metadata:
      labels:
        app: outline-redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-conf
              mountPath: /redis.conf
              subPath: redis.conf
      volumes:
        - name: redis-conf
          configMap:
            name: redis-config
---
apiVersion: v1
kind: Service
metadata:
  name: outline-redis
  namespace: outline
spec:
  selector:
    app: outline-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
