deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: outline
  labels:
    app: outline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      containers:
        - name: outline
          image: docker.getoutline.com/outlinewiki/outline:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: outline-data
              mountPath: /var/lib/outline/data
      volumes:
        - name: outline-data
          persistentVolumeClaim:
            claimName: outline-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
spec:
  selector:
    app: outline
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
  namespace: outline
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: outlines.softinator.org
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: outline
            port:
              number: 3000
